!TODO
if you switch from skin A to skin B, it does not go through Startup.xml
so you'll have to restart Kodi once for the default values to be set.

@ronie (and everyone else) - FYI - you can get around this issue by using an <onunload> in DialogConfirm.xml to force Startup.xml
Confirm dialog is always launched when switching skins.

DialogConfirm:
<onunload condition="String.IsEmpty(Window(Home).Property(SkinInitStarted))">ReplaceWindow(Startup.xml)</onunload>

Startup:
<onload condition="String.IsEmpty(Skin.String(MyString))>Skin.SetString(MyString,Value)</onload>
<onload>SetProperty(SkinInitStarted,1,Home)</onload>




localize
Size of menus
Hide content when not topmost (dialoginfo)
Menu for dialoginfo
gradients

DialogVideo labels for different container types
infolabel for seasons
$VAR[SeasonsLabel]
FADELABEL WI6H GENRES
Sets
50 - build manually to add details next to focused label as a grouplist

Dialog backgrounds - add into myvideonav and home directly? only required on screens with fanart on them


Grid view >> emergency calls
Fallback for listicon (compare tring to default?)
Thumbnail on context menu
File views, music views, addon views

Transitions between videonav screens e.g. seasons to episodes and back
calculation slow Load
thumbnail instead of fanart for list
epidosde list with thumbnails

scrollbar-can't hold down previous on gallery/Fanart
scrollbar-doesn't show on list/tvshows

MENU: Jittery on first pass when using buttons instead of labels

VISIBLE: Stuff shows briefly on scroll through views when using fadetime on hidden (fadetime 0 on VisibleFadeAnimation fixes)

DIALOGBUTTON - Settings OnClick not working


item focus animation (better animation, )
allowed containers for each viewtype
Localize menus
scroll letter
dialogconfirm-progressbar
Filter and sort Options

videos filelist view

Animations
  -Viewtype Settings UnFocus
  -DialogInfo load/close
  -Load/Unload viewtypes
  -Hide Media Details - !Window.IsTopMost(movieinformation)
  visible fade animation 3000 weird effect on viewtype details


  2019-11-07 23:26:24.064 T:123145503969280   ERROR: EXCEPTION Thrown (PythonToCppException) : -->Python callback/script returned the following error<--
                                               - NOTE: IGNORING THIS CAN LEAD TO MEMORY LEAKS!
                                              Error Type: <type 'exceptions.SyntaxError'>
                                              Error Contents: invalid syntax (<string>, line 1)
                                              Traceback (most recent call last):
                                                File "/Users/ahekmat/Library/Application Support/Kodi/addons/script.embuary.helper/default.py", line 44, in <module>
                                                  Main()
                                                File "/Users/ahekmat/Library/Application Support/Kodi/addons/script.embuary.helper/default.py", line 20, in __init__
                                                  self.getactions()
                                                File "/Users/ahekmat/Library/Application Support/Kodi/addons/script.embuary.helper/default.py", line 40, in getactions
                                                  util(self.params)
                                                File "/Users/ahekmat/Library/Application Support/Kodi/addons/script.embuary.helper/resources/lib/utils.py", line 175, in calc
                                                  result = eval(str(formula))
                                                File "<string>", line 1
                                                  ( / ) * 100
                                                    ^
                                              SyntaxError: invalid syntax
                                              -->End of Python script error report<--
